finished:大数据日知录Chubby

--- a/Others/大数据日志录-架构与算法.md
+++ b/Others/大数据日志录-架构与算法.md
@@ -263,7 +263,7 @@ tags: [大数据, 概述, Big Data]
     * 资源竞争申请过程通过事物进行：只要计算框架具有特定的优先级就可以申请占有副本中的空闲资源，一旦框架做出资源决策，便将私有副本信息同步到中央调度器的主副本中去，从而完成资源申请并保证对其他框架可见(此外无法保证不同计算框架资源分配的公平性，低优先级框架可能出现饿死的情况)。
 * 三种调度范型不断弱化全局的中央调度器的功能，从而提高系统的灵活性，并发性，可扩展性。大规模数据处理系统的趋势是在硬件层之上的统一资源管理与调度系统，从而提高集群的整体资源利用率。
 
-## 资源调度策略
+### 资源调度策略
 * FIFO：按照作业提交的先后顺序或者作业的优先级将其放入一个线性队列，在资源调度时按照先进先出的规则进行资源分配(新加入的作业容易出现饿死)，是hadoop默认的调度策略；
 * 公平调度器:
     * 首先将用户任务分配到多个资源池，每个资源池设定资源分配最低保障和最高上限(资源分配时先按照最低保障分配，然后将剩余资源按比例分配)。此外还可以指定资源池的优先级(高优先级的资源池将分配到更多资源)，另外运行中当一个资源池的资源由剩余时可将资源共享给其他资源池；
@@ -282,7 +282,7 @@ tags: [大数据, 概述, Big Data]
     * 分配策略:在保证个用户的“主分享量”相同的情况下，最大化启动的任务数量
 * 此外还有其他针对Hadoop的改进的资源调度策略，如:资源感知调度策略，动态优先级调度策略，最长时间预估调度策略，约定截止时间调度策略等 
 
-## Mesos
+### Mesos
 * 典型的两级调度器(主从架构):
     * 中央调度器采用极简功能和极简接口，只是根据分配策略(可插拔提供DRF和优先级调度)决定分配给各个框架的资源数量(由资源列表表示)，由多个主控服务器构成，通过ZooKeeper保证当出现故障时主备的切换
     * 各个框架自身负责数据局部性等具体资源调度策略，且需要向Mesos注册框架调度器和执行器两个接口
@@ -290,7 +290,7 @@ tags: [大数据, 概述, Big Data]
         * 执行器运行在集群中的从节点执行具体的任务，执行器相互间通过LXC资源隔离
         * 不同框架不能向中央调度器指定其资源要求和约束条件，只能被动接受，但当接受到的资源不符合要求时，可以拒绝，等待后续的资源分配。同时为避免频繁的拒绝资源带来的效率问题，不同框架可以向中央调度器注册"过滤器"，对其需要的资源进行描述；
     * 优点:减小中央负载，提高效率，同时在适应新的框架时中央调度器只需较小的改动，增加了调度系统的可扩展性和健壮性。比较适合不同框架任务同质化场景，尤其大部分都是短作业的场景；
-## YARN
+### YARN
 * Hadoop2.0引入的一个独立的资源管理系统（在hadoop1.0时所有任务的资源和生命周期均由全局唯一的JObTracker负责，容易成为系统瓶颈，其存在单点失效问题），同时每个作业都拥有各自的应用管理器AM来负责各自的资源申请和任务生命周期管理
 * 典型的两级调度系统:
     * 唯一资源管理器RM充当中央调度器的角色，(与Mesos)支持抢占式的调度
@@ -300,10 +300,48 @@ tags: [大数据, 概述, Big Data]
         * AM服务器负责系统内所有AM的最初启动和运行状态管理；
     * 每个任务各自的AM作为二级调度器，在向RM申请资源时可明确数据局部性等条件
 * 过程:
-用户通过客户端向YARN提交作业；
+    * 用户通过客户端向YARN提交作业；
     * RM通过调度器申请资源，用于启动运行作业的AM(申请成功AMS通知节点管理器在相应的容器内运行AM);
     * AM负责将作业划分为若干任务，并向RM申请所需资源，RM收到资源请求后通过调度器分配资源，找到合适的容器后，将资源信息返回个AM;
     * AM根据资源信息，在任务间优化分配策略，确定后直接与资源所在节点管理器联系，在对应容器中启动任务，由节点管理器负责容器的隔离
     * AM在不认任务执行完成后逐步向RM释放所占资源
+
+
+## 分布式协调系统
+* 大规模分布式系统中存在各种协调需求，如:
+    * 动态配置:新加入的服务器节点自动获取配置参数，感知(推送)节点的状态参数
+    * 发生故障时的自动的主备切换
+    * 感知新机器的加入，自动的负载均衡
+    * 分布式环境下的锁服务
+    * 多节点之间的任务同步
+    * 快速构建生产者-消费者 队列
+### Chubby锁服务
+* 针对分布式环境下的粗粒度(持有时间比较长)的锁服务，主要通过数据加锁的方式来实现不同节点间的任务同步，并对系统环境和资源达到一致性认知。如，可以利用不同节点竞争同一个数据的锁，来实现领导者选举；
+* 理论基础为Paxos一致性协议:
+    * Paxos是在完全分布式的环境下，不同客户端通过相互通信并投票，对某个决定达成一致的算法，基础的版本无中心管理节点，需要多轮的投票
+    * Chubby对Paxos进行的改造加入了中心管理节点，改善了系统效率
+* 系统架构:
+    * Chubby服务由客户端链接的库程序和多个Chubby单元构成
+        * 通常一个数据中心部署一套Chubby单元，包含多台机器，通过Paxos协议选举其中的一台作为，主服务器，其余的作为备份服务器，所有的机器的内存中均维护一份和主控服务器完全一致的树形结构(其内容为加锁对象或者数据存储对象)
+            * 间隔一段时间集群会进行定期的投票选举新的主控服务器(一般无故障等异常情况发生会倾向于选择原来的主控服务器)，从而实现故障自动切换，若备份服务器发生故障，Chubby系统会自动将新的机器加入集群，并让其运行相关程序，更新系统的DNS信息，从而阶段发生故障的备份服务器。
+            * 主控服务器会定期查询DNS信息，从而很快发现备份服务器的变化，并通过一致性协议将这一变化通知其他备份服务器。同时新加入的备份服务器可以通过外存或者其他备份服务器获取自己要维护的内存数据
+        * 客户端通过嵌入的库程序，利用RPC通信来和服务器进行交互，同时对Chubby的读写请求都会交由主控服务器来负责:
+            * 主控服务器收到数据更新请求后会更改内存中维护树形的管理数据，并通过改造后的Paxos协议通知其他备份服务器更新数据来保证多备份副本的数据一致性，当所有的备份服务确认数据更新完成后，主控服务器才可以认为此次更新请求完成
+            * 当备份服务器接收到数据更新请求时，会通过告知客户端主控服务器的地址，从而将请求转发到主动服务器
+* 数据模型
+    * Chubby采用类似文件目录的树形结构(LS/chubbyUnitName/\*\*)，并在此基础上提供针对目录和文件的锁服务（此外还有访问权限控制，事件通知机制等），主要用来存储一些管理信息和一些小的基础数据(要求文件内容一次性的全部读完或写入)
+    * 同时提供文件内容和目录更改后的通知机制:客户端可以订阅系统的文件和目录，当文件内容或子目录发生变化时，系统主动通知订阅的客户端，以使得信息变化及时传播
+* 会话与KeepAlive机制
+    * 客户端和服务器之间通过周期循环的KeepLive机制(RPC调用)维持会话(两者的联系通道),保证在租约期内服务器不会单方面解除会话：
+        * 当客户端向服务器发送一个keeplive，此时这个消息被服务器端阻塞，直到此次租期结束。而后释放先前的keeplive消息,并响应相应的客户端拥有一个新的租期；
+* 客户端缓存
+    * 允许客户端缓存服务器端的数据，并由Cubby维持缓存数据和服务器端数据的一致性：
+        * 主控服务器维护一份缓存表，记录那些客户端缓存了哪些数据，当主控服务器收到数据更新请求后，首先查询缓存表，并通知缓存了该数据的客户端此数据失效，当主控服务器收到所有相关客户端回应的确认消息后，才可以继续进行数据更新操作
+* 其他每个Chubby单元每隔一段时间，会对自己维护的数据进行快照操作，并将快照内容存储到另外一个数据中心的GFS文件系统中；
+
+### ZooKeeper
+
+
+
     
 
