--- a/Others/大数据日志录-架构与算法.md
+++ b/Others/大数据日志录-架构与算法.md
@@ -340,6 +340,55 @@ tags: [大数据, 概述, Big Data]
 * 其他每个Chubby单元每隔一段时间，会对自己维护的数据进行快照操作，并将快照内容存储到另外一个数据中心的GFS文件系统中；
 
 ### ZooKeeper
+* 简介:由Yahoo开发的一套可扩展高吞吐分布式协调系统
+#### 体系结构：
+* Zookeeper服务集群，每个服务器内维护类似文件系统的树形数据结构，通过ZAB协议选举出其中一台作为主控服务器，其他的则作为从属服务器。
+* 读写请求处理:
+    * 客户端可通过TCP与集群中的每台服务器通信，若为读请求则交由自己处理(可能读到过期数据)，若为写更新请求则必须转发给主控服务器处理
+    * 主控服务器将所有更新操作进行序列化(TCP可保证客户端请求的序列性)，然后利用ZAB协议将数据更新请求通知所有从属服务器。
+    * ZAB一致性协议采用简单的多数仲裁方式(需要保证超过一半的服务器存活，服务可用)，因此当主控服务器收到多数从属服务器更新完成消息,则通知客户端更新完成
+* 保证数据一致:
+    * 由于主控服务器更新广播存在一定的延迟，为了解决读数据过期问题，Zookeepe的API中提供了Sync操作，接收到该请求的服务器会自动从其他服务器将自身数据更新到最新状态，保证主从服务器数据的同步
+    * 对于每次读写请求。服务器都会返回给客户端一个zxid编号，代表当前服务器看到的数据最新版本，在以后的请求中客户端都会携带该zxid编号，若请求的zxid编号大于服务器本身的zxid编号，则代表该服务器的数据已过期，会主动从主控服务器中将数据更新到最新状态。
+* 提高容错性:
+    * zookeeper通过重放日志结合模糊快照对服务故障进行容错；
+    * 重放日志:在更新操作作用于内存数据之前，首先将操作写入外存日志中避免数据丢失
+    * 模糊快照: 在周期性的对内存数据做数据快照时，并不对内存数据加锁，而是用深度遍历的方式将内存中树形结构转入外存快照数据中(可能不能体现数据的最新变化)
+    * Zookeeper保证数据操作的幂等性，即只要保证操作的顺序不变，多次执行同一操作对最终结果无影响。
+#### 数据模型
+* Zookeeper内存数据模型类似传统的文件系统，由树形的层级目录结构构成，其中的节点称为Znode(可以是文件，也可以是目录)，其中的文件一般为需要整体完成读写操作的小文件(如一些全局配置文件)
+* Znode节点有两种类型:
+    * 持久节点:不论客户端会话情况，会一直存在，只有当客户端显式调用删除操作才会消失
+    * 临时节点:会在客户端会话结束(或发生故障)时由系统自动清除。
+* 其他:
+    * 客户端可以将节点设置为观察标识，当节点内容发生变化，Zookeeper会通知客户端
+    * 若节点属性拥有自增属性，Zookeeper会自动将顺序编号赋予节点名字
+#### 典型应用场景:
+* 领导者选举:
+    * 在唯一的主服务器故障时，从备选服务器中选举产生新的主控服务器，避免单点失效问题；
+    * 所有进程读取lead node并设置观察标识，若读取失败，代表无lead服务,则尝试自己以临时节点的形式创建lead node，并将自己的内容写入，若创建成功则该进程成为lead 服务。(因为其他服务设置的观察标识，所以会收到领导者变化信息，可通过读取操作获取最新领导者信息)
+    * 若lead服务发生故障，因为lead node为临时节点，所以随后会被系统清除，其他节点收到领导节点变化通知，通过尝试自身创建lead node竞争继任领导者；
+* 配置管理：
+    * 将配置文件存储在zookeeper的某个节点config node中，分布式系统中的客户端进程启动时从config node中读取配置信息，并设置观察标识(从而可以及时感知配置的变化)
+* 组成员管理
+    * 用来动态监控一个组内成员的变化情况(新增/离开)
+    * Zookeeper可利用临时节点进行组成员管理:在Zookeeper中指定一个节点group node作为群组节点，利用该节点下不同名字的子节点标识不同的组成员
+* 任务分配:
+    * 分布式环境下，将不同的任务负载分别分配到多台可用的服务器
+    * 监控进程对应zookeeper中的某一节点 tasks node.当有新的任务加入，会在该节点下创建对应子节点。当监控进程感知到新任务的加入时，会在每台机器对应的machine node下创建相同的任务节点；
+    * 机器感知到自己对应节点下新增的任务子节点，会读取任务信息，在自身执行。当执行完成后会同时删除machine node和tasks node下该任务对应的子节点。监控进程感知到任务已经完成
+* 锁管理:
+    * 在Zookeeper中选择节点lock node作为锁标识，每个尝试获取该锁的节点，在对应lock node下创建临时的自增子节点，并检查自己是否为所有子节点中编号最小的节点，若是则获得锁，否则找到编号比自己小1的节点并设置观察标识。
+    * 当一个进程释放锁时，删除对应的子节点。此时会通知随后的一个等待进程检查自己是否编号最小，从而等待进程获得锁。
+    * 对于读共享锁的实现，在判断时可以查找是否存在编号小于自己的进程拥有写锁(通过节点名字)，若没有则获得锁
+* 双向路障同步:
+    * 指多个并发进程达到某个同步点后，才可以继续推进，如图计算中的BSD模型和M/R计算模型中Map和Reduce两阶段之间的同步；
+    * 利用zookeeper某个节点block node代表路障，每个并发进程通过在该节点下创建子节点代表自己已到达同步点(准备离开时删除对应子节点)，通过子节点的个数判断是否达到同步条件
+* Zookeeper实际应用:如HBase,流式计算系统Storm,资源管理系统Mesos,pub-sub消息服务系统Hedwing/kafka,SolrCloud,基于lucene的可扩展分布式索引系统Katta
+
+## 分布式通信：
+
+
 
 
 
