大数据日知录笔记:消息队列完成

--- a/分布式/大数据日知录-架构与算法/大数据日志录-架构与算法.md
+++ b/分布式/大数据日知录-架构与算法/大数据日志录-架构与算法.md
@@ -408,14 +408,86 @@ tags: [大数据, 概述, Big Data]
     * 首先使用IDL定义消息体以及PRC函数调用接口
     * 然后使用工具根据IDL定义文件生成指定编程语言的代码.
     * 最后可在应用程序中链接上一步生成的代码(执行)
-*Avro 
+* Avro 
     * Apache开源的序列化与RPC框架,使用在Hadoop的数据存储与内部通信中.,提供简洁快速的二进制数据格式.并能和动态语言进行集成
     * 使用JSON作为IDL定义语言(可灵活定义数据schema以及RPC通信协议),不仅支持常见的基本数据类型,也支持Record,Array,Map等复杂数据类型(因此有很强的数据描述能力)
         * 
 
 ### 消息队列
 
-###应用层多播通信
+### 应用层多播通信
+* 分布式系统构件之间通过传递消息可以解除相互之间的功能耦合,从而减轻子系统之间的依赖,使得各个子系统或者构件可以独立演进,维护或者重用;
+* 传递的消息是指构件之间信息传递的单位,可以是简单的类型(如字符串),也可以是复杂对象;
+* 消息队列时是消息传输过程中保存消息的容器或中间件,主要是提供消息路由并保障消息可靠传递
+#### 常见的消息队列系统
+* 如ActiveMQ,ZeroMQ,RabbitMQ,Kafka,RocketMQ,Kestrel等
+* 在实测中,对于连续发送1KB大小的消息,从性能的角度:
+    * ZeroMQ性能最优,可达10万TPS以上;(最轻量级的系统,严格讲是介于会话层和应用层之间的网络通信库.适用于高并发低延迟的场景,如金融行业数据传输;但是其不支持消息持久化,消息全部保存在内存中)
+    * Kafka次之,可达4万TPS左右;(相对轻量级级系统,支持消息消息持久化,支持"至少送达一次"语义,性能优异,同时高可用性以及可扩展性也很出色)
+    * RabbitMQ大约1万TPS;ActiveMQ最次,可达6000TPS左右(这两者相对来说属于重量级系统,其遵循AMQP协议,具有较强的功能和相对广泛的使用场景,因此也导致其性能较低和扩展性较差)
+* 一般消息中间件都支持两种模式的队列:
+    * 消息队列模式:生产者将消息放入队列,消费者从中消费消息
+    * Pub-Sub模式:生产者将消息发布到指定的主题队列中,而消费者订阅指定的主题的队列消息,当订阅的主题有新消息时,对应的消费者可以通过pull拉取,或者由消息中间件通过push推送由消费者将消息消费掉;
+* 一般为了能够保证送达消息,消息中间件会支持消息持久化存储(ZeroMQ除外)
+
+#### Kafka
+* 简介: 
+    * 采用Pub-Sub机制的分布式消息系统(最初作为Log收集工具);
+    * 具有极高的消息吞吐量,较强的可扩展性和高可用性,消息传递低延迟,支持消息持久化,支持"至少送达一次"语义
+    * 可用于log收集,用户行为实时收集,以及机器状态监控等;此外还可以作为流式计算系统的底层构件(如Samza构建在Kafka和YARN之上)
+* 整体架构
+    * 系统组成:
+        * 消息生产者Producer: 产生指定Tipic消息并将其传入代理服务器集群
+        * 代理服务器Broker: 在磁盘上存储维护各种Topic的消息队列
+        * 消息消费者Consumer: 从订阅的指定Topic队列中pull新产生的消息进行处理(有点Consumer可以控制消费速率,避免推送方式(如Scribe,Flume)可能带来的消息积压问题)
+    * 在Kafka支持对Topic进行数据分片:
+        * 每个数据分片是有序的,不可更改的尾部追加的消息队列;
+        * 队列内的每个消息被分配本数据分片内唯一的消息ID(称为Offset).
+        * 生产者在产生消息时可以指定数据分片(具体方式可采用Round Robin随机分配,或根据一定的应用语义(如用户Id)逻辑分配)
+        * 对于每个数据分片,在Kafka内部实现时:
+            * 以一系列被切割成固定大小的文件来存储在硬盘上(天然支持持久化),
+            * 同时在内存维护每个文件首个Offset组成的有序数组作为索引(其内容指向外部文件)
+            * 在读取消息时,首先二分查找,确定文件,然后根据Offset偏移量和读取内容大小(由消费者提供)确定读取的文件范围
+            * 此外可以设置外包文件保留期限;支持变换Offset读取过期消息(从而支持"至少送达一次"语义)
+    * 管理信息维护:
+        * Kafka将消费者目前读取的哪个消息由消费者自身保存(而不像大多数系统由代理服务器保存),从而简化了设计
+        * Kafka将其他管理信息保存在ZooKeeper而非服务器中(类似Storm),从而代理服务器完全无状态,增强系统容错性以及可扩展性,具体信息包括:
+            * 侦测代理服务器和消息消费者的动态加入和删除
+            * 当动态加入或者删除代理服务器以及消息消费者后对消息系统进行负载均衡
+            * 维护消费者和消息TOPIC以及数据分片的相互关系,并保存消费者当前读取消息的Offset
+            * 数据副本管理信息
+* ISR副本管理机制
+    * Kafka通过消息副本机制提供高可用的消息服务,其副本管理单位为Topic的数据分片
+    * 在配置文件里可以指定数据分片的副本数,在多个副本里,分一个为主副本和多个次级副本;
+    * 所有针对数据分片的消息读/写请求都由主副本来负责响应(次级副本只是以主副本数据消费者的方式从主副本同步数据)
+    * 当主副本发生故障,系统将其中某个次级副本提升为主副本,以此达到系统的高可用性
+    * Kafka使用ISR(In-Sync Replicas)的机制来保证数据一致性(为减少副本数并未采用Zab或Paxos多数投票机制):
+        * 将所有次级副本数据分到两个集合:
+            * ISR集合:特点是即时和主副本数据保持一致
+            * 另外集合允许其消息队列落后于主副本的数据
+        * 在主备切换时,只允许从ISR集合中选择获=候选主副本(保证数据一致)
+        * 在数据分片进行消息写入时,只有当ISR集合中的所有备份都写成功才能认为这次写入成功;
+        * 其中ISR集合的信息保存在Zookeeper当中
+* 性能优化:
+    * Kafka基于文件系统,需要涉及磁盘读写,系统因此尽量避免随机读写,利用顺序读写;
+    * Kafka采用了Linux的SendFile调用将文件内容进行网络传输(避免多次数据复制,OS直接将数据从内核页缓存复制到网卡缓存)
+
+#### 应用层多播通信
+* 概述:"应用层多播通信"指分布式应用系统内各个节点组织成一定的组织结构,在此结构上实现多接收方的数据通信;
+* 在P2P网络中,分布式应用层的节点常见的组织结构有星形结构,DHT(Distributed Hash Table)环形结构以及树形结构,或者无结构(任意节点间随意连接);
+    * 在无结构情形下,一种原始的实现多播通信的方式是某个节点通知所有与之有直接连接的节点,然后被通知的节点再依次通知其自己的邻居节点,依次传播(因为两节点间可能存在多条可达通路,因此有较好的信息传递强壮性,但会造成消息指数增长,效率不高)
+* Gossip协议(也称为传染协议,在传递强壮性和传播效率间尽心了折中):
+    * 信息传播模型:
+        * Gossip协议用来尽快将本地更新数据通知到网络中的所有其他节点,具体更新模型可分为三种:
+            * 全部通知模型:
+                * 当某个节点有更新消息,则立即通知所有其他节点;
+                * 其他节点在接收到通知后,判断收到的消息是否比本地消息要新(可通过时间戳或版本信息),是则更新本地消息,否则放弃什么也不做;
+                * 特点: 简单当容错性较低(可能造成传播工程中消息丢失)       
+            * 反熵模型(最常用):
+            * 散布谣言模型:
+                * 和反熵模型相比增加了传播停止判断:
+                    * 
+    * 在大数据领域(尤其是P2P网络)中广泛使用(也用于维护主备数据的最终一致性以及负载均衡),如Dynamo,Cassandra,Riak使用其进行故障检测和集群成员管理或者副本数据修复;BitTorrent,S3使用其在节点间交换信息;
                               
 
 
