多核编程完成线程的创建部分

--- a/分布式/多核应用编程实战/多核应用编程实战.md
+++ b/分布式/多核应用编程实战/多核应用编程实战.md
@@ -56,3 +56,48 @@ int main()
     printf("return value%d \n",*(int*)ret);   /++
 }
 ```
+#### 分离线程
+* 分离线程:无需等待另外一个线程调用pthread\_jion()其所占资源就可回收(对分离线程调用pthread\_jion()会出错),有两种创建方法
+    * 1.在线程属性结构中设置相应的属性
+    * 2.对现有线程调用pthread_detach()
+* 分离线程的句柄在线程退出时被回收,句柄的任何缓存版本不再指向原线程
+```
+#include<pthread.h>
+#include<stdio.h>
+
+ void* child_routine(void* param)
+{
+    int id = (int)param;
+    printf("Detach thread %i \n", id);
+    pthread_detach(pthread_self());
+}
+int main()
+{
+    pthread_t thread[100];
+    for(int i=0;i<10;i++)
+    {   
+        pthread_create(&thread[i], 0, child_routine, (void*)i);
+    }   
+}
+```
+#### 设置pthread的属性
+* 线程属性在创建时设置,有些在之后可以修改(如线程分离状态),有些则不能修改:
+    * 创建一个线程属性结构:pthread\_aar\_t
+    * 初始化属性结构体pthread\_attr\_init(&pthread_t)
+    * 使用对应的函数设置相关属性,如:
+        * 设置为分离状态 pthread\_attr\_setdetachstate(&attr, PTHREAD\_CREATE\_DETACHED);
+        * 获取线程的栈大小属性: size\_t stacksize;  pthread\_attr\_getstacksize(&attr,&stacksize);
+            * 控制栈大小的另外一个命令是ulimit -s \<stacksize\>
+    * 将此结构作为参数传递给创建函数pthread_create()
+    * 使用后可以随时调用pthread\_attr\_destroy()销毁
+> 为了让堆(malloc从堆中获得内存)和栈增长,堆通常放置在应用程序之后,位于可寻址内存的低端,而栈通常放在内存的上端 <\br>
+  每个线程会收到分配给其栈的一个固定大小的连续内存块,因为可用地址空间有限,所以栈空间所用内存取自可用于堆的内存;提供给一个线程的绝对最小可接受内存存储于变量PTHREAD\_STACK\_MIN中
+
+### 编译多线程代码
+* 编译多线程代码可能出现问题的两个地方是头文件和库文件
+* 当以gcc进行生产时,使用编译器标志\-pthread,不仅会传递标志\-D_REENTRANT(需要定义该标志),还会与POSIX线程库链接;
+### 进程终止
+* 当主线程结束后,所有子线程都将终止,其资源被释放
+* 主线程可以调用pthread\_exit(),从而保证主线程等待所有线程结束再退出(即使子线程已分离也是如此)
+
+### 线程之间共享数据cd
