完成共享内存

--- a/分布式/多核应用编程实战/多核应用编程实战.md
+++ b/分布式/多核应用编程实战/多核应用编程实战.md
@@ -350,4 +350,168 @@ int main()
 ```
 
 ### 变量和内存
-:
+* 线程之间可共享的数据有全局变量和在堆上分配的内存等
+    * 栈中保存的变量就是线程私有数据,此外传递到函数的参数也是
+* 应注意对于线程间共享的数据,如果数据被其他线程修改,则应在数据声明时将数据声明为volatile
+    * 替代方法可能是将变量强制类型转换为volatile,这意味着仅当需要时代码中的变量才会被重新加载
+    * 此外可以使用函数调用强制重新加载变量
+    > 有些编译器优化(如内联)可能会导致依靠函数调用的副作用用来强制内存顺序的代码失败
+* 有时设立线程私有的"全局"数据非常有用,即数据对线程执行的所有例程可见,但每个线程只能看到该数据属于自己的一份副本,这称为线程本地存储
+* POSIX还为声明和使用线程局部变量提供了一组函数调用:
+    * 这些函数使用键来标识每一项共享数据:
+        * 而键则通过调用pthread\_key\_create()来创建
+        * 调用pthread\_key\_delete()来删除
+        * 所有线程都可通过此键来获取和设置线程本地参数
+            * pthread\_setspecific()调用所需的参数为键和线程局部变量的值
+            * pthread\_getspecific()在接收相同键时将返回之前为该键设定的值
+    * 线程局部变量的一个缺点是对全局线程不可见,所以某些情况下需使用数组来保存子线程产生的值
+```
+// 对线程局部存储使用析构函数
+#include<pthread.h> 
+#include<stdio.h> 
+#include<stdlib.h> 
+ 
+pthread_key_t parameter; 
+ 
+void* threadFunc(void* param) 
+{ 
+    char* mem = malloc(100); 
+    pthread_setspecific(parameter,mem); 
+} 
+ 
+void destructor(void* param) 
+{ 
+    free(param); 
+    printf("memory freed \n"); 
+} 
+ 
+int main() 
+{ 
+    pthread_t thread; 
+    pthread_key_create(&parameter,destructor); 
+    pthread_create(&thread,0 ,threadFunc, 0 ); 
+    pthread_join(thread,0); 
+    pthread_key_delete(parameter); 
+} 
+
+```
+### 多进程编程
+* 多进程编程的主要优点是,一个进程发生故障不会导致所有进程死掉,因此可从故障中恢复
+* 启动多个进程,并让进程从文件或命令行加载通用初始化参数来启动通信非常容易,然而已编程方式做到这一点通常更加实用
+* 进程创建的UNIX模型为分叉-执行(fork-exec)模型,
+    * fork()调用生成一个完全复制父进程内存的子进程(在进程中返回零值,在父进程返回子进程的PID);
+    * exec()调用以一个新的可执行文件替换当前进程.
+    *这两个调用通常一起出现,首先fork创建一个新的进程,然后该进程直接调用exec()以一个新的可执行文件替换自身(如果fork()后不跟exec调用,我们通常将有同一个进程的两个副本)
+```
+#include<unistd.h>
+#include<stdio.h>
+#include<sys/wait.h>
+
+int main()
+{
+    int status;
+    pid_t f=fork();
+    if(0==f)
+    {   
+        execl("/usr/bin/sleep","/usr/bin/sleep", 10);
+    }   
+    else{
+        waitpid(f,&status, 0); 
+        printf("Status = %i \n", status);
+    }   
+}
+```
+#### 在进程之间共享内存
+* 不同进程一般不共享数据,但可以设置多个进程共享内存:
+    * shm_open()调用会创建一个共享内存段
+        * 需要的参数为锻名,大小和一组所创建的共享内存的标志,以及访问权限位;
+            * 段名以/开头且之后不含斜线的字符串
+            * 创建标志即创建文件的常用标志:O\_RDONLY,O\_RDWR,O\_CREATE,O\_EXCL
+        * 返回值为共享内存段的文件描述符
+    * 可通过ftruncate()设置保留段的大小,参数为该段的文件描述符和所要求大小
+    * 一旦段存在,则进程可调用mmap()连接到内存段
+        * 需要参数:
+            * void\* 内存中段的首选起始地址
+            * size\_t 段的字节数大小
+            * int 段的保护标志.对于可执行页面为PROT\_EXEC,对于可读页面PROT\_READ,对于可写页面为PROT\_WRITE;权限通常与shm\_open调用中设置的权限相匹配
+            * int 段的共享标志,与其他进程共享段时为MAP\_SHARED,使段对当前进程私有时为MAP\_PRIVATE
+            * int 共享内存的文件描述符
+            * off_t 共享内存区域内的偏移量
+        * 调用返回值是一个指向共享内存段的指针
+    * 一旦进程使用完共享内存段,即可调用munmap()取消共享内存段与地址空间的映射
+    * shm\_unlink()可从系统中删除共享内存段
+```
+#include<sys/mman.h>
+#include<fcntl.h>
+#include<unistd.h>
+
+int main()
+{
+    int handle = shm_open("/shm",O_CREAT|O_RDWR, 0777);
+    ftruncate(handle, 1024*1024*sizeof(int));
+    char* mem = (char*)mmap(0, 1024*1024*sizeof(int),PROT_READ|PROT_WRITE,MAP_SHARED,handle,0);
+    for(int i=0;i<1024*1024*sizeof(int);i++)
+    {   
+        mem[i]=0;
+    }   
+    munmap(mem, 1024*1024*sizeof(int));
+    shm_unlink("/shm");
+}
+```
+* 当分叉出子进程时,它会收到一份父进程的内存副本,从而能访问共享内存段,以及共享内存段所包含的互斥量和变量
+    * 要注意共享内存段中所创建对象的对齐方式,不同操作系统可能对于对齐有不同的限制
+```
+//在进程间共享互斥量
+#include<sys/mman.h>
+#include<sys/wait.h>
+#include<fcntl.h>
+#include<unistd.h>
+#include<stdio.h>
+#include<pthread.h>
+
+int main()
+{
+    pthread_mutex_t *mutex;
+    pthread_mutexattr_t attributes;
+    pthread_mutexattr_init(&attributes);
+    pthread_mutexattr_setpshared(&attributes, PTHREAD_PROCESS_SHARED);
+    int handle = shm_open("/shm",O_CREAT|O_RDWR, 0777);
+    ftruncate(handle,1024*sizeof(int));
+    char* mem = mmap(0,1024*sizeof(int),PROT_READ|PROT_WRITE,MAP_SHARED,handle,0);
+
+    mutex = (pthread_mutex_t*) mem;
+    pthread_mutex_init(mutex,&attributes);
+
+    pthread_mutexattr_destroy(&attributes);
+    
+    int ret = 0;
+    int *pcount = (int*)(mem+sizeof(pthread_mutex_t));
+    *pcount = 0;
+
+    pid_t pid = fork();
+    if(0 == pid)
+    {  /*子进程*/
+        pthread_mutex_lock(mutex);
+        (*pcount)++;
+        pthread_mutex_unlock(mutex);
+        ret = 57; 
+    }   
+    else{
+        int status;
+        waitpid(pid,&status,0);
+        printf("Child returned %i \n", WEXITSTATUS(status));
+        pthread_mutex_lock(mutex);
+        (*pcount)++;
+        pthread_mutex_unlock(mutex);
+        printf("Count = %i \n",*pcount);
+        pthread_mutex_destroy(mutex);
+    }   
+    munmap(mem,1024*sizeof(int));
+    shm_unlink("/shm");
+    return ret;
+}
+```
+
+#### 在进程之间共享信号量
+#### 消息队列
+* 消息队列是在进程间传递消息的一种方法
