完成:使用POSIX线程

--- a/分布式/多核应用编程实战/多核应用编程实战.md
+++ b/分布式/多核应用编程实战/多核应用编程实战.md
@@ -514,4 +514,299 @@ int main()
 
 #### 在进程之间共享信号量
 #### 消息队列
-* 消息队列是在进程间传递消息的一种方法
+* 消息队列是在进程间传递消息的一种方法,消息放置于队列中并按照先进先出的顺序读出
+    * mq_open()函数连接到消息队列,返回一个到消息队列的句柄
+        * 参数包括消息队列名称(最多13个字符,以/开头且不包含其他/)和一些标志(如:O\_RDONLY,O\_WRONLY,O\_RDWR)
+        * 打开时若传入附加标志O\_CREAT(此时还需要传入访问权限和属性指针)则消息队列不存在便会创建消息队列(否则打开失败),
+        * 如果希望仅当消息队列不存在时才能成功调用打开队列的函数,则可在调用时传入附件标志O\_EXCL
+        * 另一个可以传入的标志为O\_NOBLOCK,此时任何写入已满消息队列或者读取空消息队列的尝试都会失败并立即返回
+    * mq\_close()函数需要消息队列的句柄作为参数,将关闭到消息队列的连接(但其还会在系统中继续存在)
+    * mq\_unlink()删除系统中的消息队列
+* 消息队列为遵照先进先出的优先级队列:
+    * mq\_send()可将消息添加到队列
+        * 参数为消息队列,指向包含消息的缓冲区指针,消息大小以及优先级(具有较高优先级的消息将被置于较低优先级的消息之前)
+        * 消息要从缓冲区复制到消息队列中,如果消息的大小大于队列的mq\_msgsize属性,调用将失败
+
+    * mq_receive():可从队列中接收消息
+    * mq\_timedsend()/mq\_timedreceive()需要绝对时间作为参数,mq\_reltimedsend\_np()/mq\_reltimedreceive\_np()需要相对时间参数,若其未成功执行则在超时后返回
+```
+/*describe: 在父进程和子进程之间传递消息*/
+#include<unistd.h>
+#include<stdio.h>
+#include<mqueue.h>
+#include<string.h>
+
+int main()
+{
+    int status;
+    pid_t f = fork();
+    if(0 == f)
+    {   
+        mqd_t* queue;
+        char message[20];
+        queue = mq_open("/messages", O_WRONLY+O_CREAT,0777,0);
+        strncpy(message, "Hello", 6); 
+        printf("Send message %s\n", message);
+        mq_send(queue,message,strlen(message)+1, 0); 
+        mq_close(queue);
+        printf("child process completed\n");
+    }else{
+        mqd_t* queue;
+        char messages[2000];
+        queue = mq_open("/messages", O_RDONLY+O_CREAT,0777,0);
+        mq_receive(queue,messages,2000,0);
+        printf("Receive messages %s \n",messages);
+        mq_close(queue);
+        mq_unlink("/messages");
+        printf("Parent process completed \n");
+    }   
+}
+```
+#### 管道和命名管道
+* 管道为两个进程之间的连接,可以两个进程之间的匿名管道.也可以是利用文件系统中的实体进行进程或线程之间通信的命名管道.管道为先进先出的流式结构.
+    * 通常在分叉出子进程之前调用pipe()来创建命名管道.
+        * 管道调用将创建两个文件描述符,一个从管道重读取内容,一个将内容写入管道
+        * 分叉后父子进程都将继承这两个文件描述符
+    * 读取和写入管道可以利用以文件描述符为参数的函数进行,如read()和write()
+```
+//使用匿名管道在父子进程之间通信
+#include<unistd.h>
+#include<stdio.h>
+
+int main()
+{
+    int status;
+    int pipes[2];
+    pipe(pipes);
+    pid_t f= fork();
+    if(0 == f)
+    {   
+        close(pipes[0]);
+        write(pipes[1],"a", 1); 
+        printf("Child sent a \n");
+        close(pipes[1]);
+    }else{
+        char buffer[11];
+        close(pipes[1]);
+        int len = read(pipes[0], buffer,10);
+        buffer[len]=0;
+        printf("Parent received %s \n", buffer);
+        close(pipes[0]);
+    }   
+    return 0;
+}
+```
+* 使用mknod()创建命名管道
+    * 参数为管道标识符的文件路径,模式(S\_IFIFO)以及文件访问权限
+    * 此后两个进程都可以open()打开文件,利用返回的文件句柄操作文件,实现通信
+    * 可以调用unlink()删除命名管道
+```
+//使用命名管道在父子进程之间通信
+#include<unistd.h>
+#include<stdio.h>
+#include<sys/stat.h>
+#include<fcntl.h>
+
+int main()
+{
+    int status;
+    mknod("/tmp/pipefile", S_IFIFO|S_IRUSR|S_IWUSR, 0); 
+    pid_t f= fork();
+    if(0 == f)
+    {   
+        int mypipe = open("/tmp/pipefile", O_WRONLY);
+        write(mypipe,"a",1);
+        printf("Child sent 'a' \n");
+        close(mypipe);
+    }else{
+        int mypipe = open("/tmp/pipefile",O_RDONLY);
+        char buffer[11];
+        int len = read(mypipe,buffer, 10);
+        buffer[len] = 0;
+        printf("Parent receive message %s \n", buffer);
+        close(mypipe);
+    }   
+    unlink("/tmp/pipefile");
+    return 0;
+}
+
+```
+#### 使用信号与进程通信
+* 信号广泛应用于UNIX与类UNIX系统.其通常由特定的事件触发,并能够被系统捕获和处理
+    * 通过调用signal()可安装信号处理程序
+        *　参数为信号编号以及处理信号的例程
+    * 如通过kill()发送信号，参数为接收信号的目的进程PID,以及信号编号
+* POSIX确保一组函数调用对于异步信号安全，特别是确保write()调用可用在信号处理程序中
+* 可以使用sigqueue()发送包含数据的信号
+    * 安装信号时需要设置包括SA\_SIGINFO在内的sa\_flags,此标志会使信号处理程序接收siginfo\_t数据.如果不指定该标志,信号处理程序将不会接收上述数据
+```
+//在父子进程间使用信号差传输信息
+#include<unistd.h>
+#include<stdio.h>
+#include<signal.h>
+#include<sys/wait.h>
+
+volatile int go=0;
+
+struct sigaction oldhandler;
+
+void handler(int sig, siginfo_t* info, void *context)
+{
+    go = (int)info->si_value.sival_int;
+    write(1,"Signal arrived \n",16);
+}
+
+int main()
+{
+    struct sigaction newhandler;
+    newhandler.sa_sigaction = handler;
+    newhandler.sa_flags = SA_SIGINFO;
+    sigemptyset(&newhandler.sa_mask);
+    sigaction(SIGRTMIN+4,&newhandler,&oldhandler);
+
+    pid_t f= fork();
+    if(0==f)
+    {   
+        while(!go){}
+        printf("Child completed go= %i \n", go);
+    }   
+    else
+    {   
+        union sigval value;
+        value.sival_int =7; 
+        sigqueue(f, SIGRTMIN+4, value);
+        waitpid(f,0,0);
+        printf("Parent completed \n");
+    }   
+
+}
+```
+
+
+* 尽管在接收到某个信号时代码已经执行了某个操作,但还会希望添加一个额外的处理程序.此时应该做的是增加一个信号处理程序到处理程序链,然后调用默认的信号处理程序
+    * sigaction()函数使我们能够创建一个信号处理程序链
+        * 参数为信号编号和两个sigaction结构
+            * 第一个包含新信号处理程序的信息,第二个返回现有信号处理程序的信息
+            * 结构中的sa\_mask字段设置当处理此信号时要阻塞的信号列表
+            * sa\_flags允许对信号处理程序的行为进行调优
+```
+//创建信号处理程序链
+#include<signal.h>
+#include<unistd.h>
+
+struct sigaction oldhandler;
+ 
+void hsignal(int signal1, siginfo_t* info, void* other)
+{
+    write(1, "Got signal \n",11);
+    if(oldhandler.sa_sigaction)
+    {   
+        oldhandler.sa_sigaction(signal, info, other);
+    }   
+}
+int main()
+{
+    struct sigaction newhandler;
+    newhandler.sa_sigaction= hsignal;
+    newhandler.sa_flags = 0;
+    sigemptyset(&newhandler.sa_mask);
+    sigaction(SIGPROF, &newhandler, &oldhandler);
+    kill(getpid(),SIGPROF);
+}
+```
+
+### 套接字
+* 套接字时进程或线程间通信的重要方式,使用套接字通信的一个特定优势为:程序扩展多一个以上的系统时只需对代码进行相对较小的改动
+* 任何使用套接字的进程首先必须请求一个套接字
+    * 套接字是一个潜在的网络连接;
+    * Socket()请求套接字,需要三个参数:
+        * 1,所请求套接字的协议族:AF\_INET或AF_INET6
+        * 2,在套接字协议族内套接字的类型: SOCK\_STREAM(TCP/IP协议),或者SOCK\_DGRAM(UDP/IP协议)
+        * 3,协议(通常为0,表示使用默认协议)
+* 服务器将调用bind(),并指定本机主机的地址以及进行连接需要侦听的端口
+    * 参数为请求返回的套接字,指向包含绑定地址信息的结构体指针(如INADDR\_ANY),以及该结构大小
+* 某台服务器被绑定到一个地址后,该服务器就可对套接字调用listen(),
+    * 参数为套接字,和可排队等待连接的最大数目
+* 侦听调用之后,服务器可通过调用accept()等待客户端连接
+    * 参数为套接字,指向套接字地址结构的指针(可选)以及该结构大小
+* 在服务器或客户端对新套接字调用close()终止连接之前服务器都可以读写该套接字
+    * write()或send()发送数据
+    * read()或recv()接收数据:
+* 调用connect()完成后,客户端就可以开始发送数据到服务器,并使用套接字接收服务器返回的数据
+```
+//服务端
+#include<pthread.h>
+#include<stdio.h>
+#include<unistd.h>
+#include<sys/types.h>
+#include<sys/socket.h>
+#include<arpa/inet.h>
+
+void* handlerecho(void* param)
+{
+    char* buffer[1024];
+    int count;
+    pthread_detach(pthread_self());
+    int s  = (int)param;
+    while(count = read(s,buffer,1023)>0)
+    {   
+        buffer[count] = 0;
+        printf("Receive %s \n",buffer);
+        write(s,buffer, count);
+    }   
+    close(s);
+}
+
+int main()
+{
+    int newsocket;
+    int s = socket(AF_INET,SOCK_STREAM,0);
+    struct sockaddr_in server;
+    bzero(&server,sizeof(server));
+    server.sin_family = AF_INET;
+    server.sin_addr.s_addr = INADDR_ANY;
+    server.sin_port = 7779;
+    bind(s,(struct socketaddr*)&server,sizeof(server));
+    listen(s, 5); 
+    while(newsocket = accept(s,0,0))
+    {   
+        pthread_t thread;
+        pthread_create(&thread,0,handlerecho, (void*) newsocket);
+    }   
+
+}
+
+//客户端
+#include<sys/types.h>
+#include<sys/socket.h>
+#include<strings.h>
+#include<arpa/inet.h>
+#include<unistd.h>
+#include<stdio.h>
+
+int main()
+{
+    int s = socket(AF_INET, SOCK_STREAM,0);
+    struct sockaddr_in server;
+    bzero(&server,sizeof(server));
+    server.sin_family = AF_INET;
+    server.sin_addr.s_addr = inet_addr("127.0.0.1");
+    server.sin_port = 7779;
+    if(connect(s,(struct socketaddr*)&server,sizeof(server)) == 0)
+    {   
+        printf("Sending 'adcd' to server \n");
+        char buffer[1024];
+        strncpy(buffer,"abcd", 4); 
+        write(s, buffer, strlen(buffer));
+        int counter = read(s, buffer , 1024);
+        buffer[counter] = 0;
+        printf("Got %s from server \n",buffer);
+        shutdown(s, SHUT_RDWR);
+    }   
+}
+```
+
+### 可重入代码和编译器标志
+* 在某些平台,gcc标志-pthread的功能为连接POSIX线程库,并定义\_REENTRANT;
+* 定义预处理器标志伴随不可重入函数附带一组可重入函数(由\_r后缀标识.如readdir_r())
+* 可重入版本的函数通常使用调用线程提供的一个结构以保存调用线程的状态
